src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Targe_Audience__c</fullName>
        <label>Target Audience</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <description>Time the training is going to happen</description>
        <label>Time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topics__c</fullName>
        <description>What will be presented at the workshop?</description>
        <label>Topics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASA Overview (Lenders)</fullName>
                </value>
                <value>
                    <fullName>Assessing &amp; Addressing Your IT Security</fullName>
                </value>
                <value>
                    <fullName>Bringing XML into Focus</fullName>
                </value>
                <value>
                    <fullName>Communicating with Millennial Students</fullName>
                </value>
                <value>
                    <fullName>Developing a Technology Plan</fullName>
                </value>
                <value>
                    <fullName>Emotional Intelligence</fullName>
                </value>
                <value>
                    <fullName>FERPA &amp; GLB Featuring Internet Security</fullName>
                </value>
                <value>
                    <fullName>Go with the Flows</fullName>
                </value>
                <value>
                    <fullName>How Automated Are You?</fullName>
                </value>
                <value>
                    <fullName>How Your Personality Impacts Your Team</fullName>
                </value>
                <value>
                    <fullName>Increase FAO Visibility &amp; Impact</fullName>
                </value>
                <value>
                    <fullName>It&apos;s an E-Signature Kind of World</fullName>
                </value>
                <value>
                    <fullName>Student Success</fullName>
                </value>
                <value>
                    <fullName>The Financially Savvy Professional</fullName>
                </value>
                <value>
                    <fullName>The Top 10 Financial Aid Pitfalls</fullName>
                </value>
                <value>
                    <fullName>Website Usability</fullName>
                </value>
                <value>
                    <fullName>We’ve Got to Stop Meeting Like This!</fullName>
                </value>
                <value>
                    <fullName>Writing an Effective RFP</fullName>
                </value>
                <value>
                    <fullName>You’ve Got Mail!</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Attending__c</fullName>
        <formula>NumberOfResponses  +  Number_of_Guests__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Attending</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <inlineHelpText>Enter the Tracking Number of the package containing the Materials Sent.</inlineHelpText>
        <label>Tracking Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <description>Who will be the trainer at this event</description>
        <label>Trainer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Andrew Marley</fullName>
                </value>
                <value>
                    <fullName>Betsy Mayotte</fullName>
                </value>
                <value>
                    <fullName>Gina Lucente-Cole</fullName>
                </value>
                <value>
                    <fullName>Jonathan Sparling</fullName>
                </value>
                <value>
                    <fullName>Lorinda Diehl</fullName>
                </value>
                <value>
                    <fullName>Jacquie Carroll</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Date__c</fullName>
        <description>Day the training is scheduled to take place</description>
        <label>Training Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Locatio_Website__c</fullName>
        <description>The website for the training location with directions example.</description>
        <label>Training Location Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Training_Location_Detail__c</fullName>
        <description>Training facilitity detail: Hotel, School, or Confernece center (eg: Holy Cross Hogan Center)</description>
        <label>Training Location Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Location__c</fullName>
        <description>Training event location</description>
        <label>Training City</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Baltimore, MD</fullName>
                </value>
                <value>
                    <fullName>Boston MA (ASA)</fullName>
                </value>
                <value>
                    <fullName>Crystal City, VA</fullName>
                </value>
                <value>
                    <fullName>Hamden, CT</fullName>
                </value>
                <value>
                    <fullName>Hampton, VA</fullName>
                </value>
                <value>
                    <fullName>Hartford, CT</fullName>
                </value>
                <value>
                    <fullName>Las Vegas, NV</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Phoenix, AZ</fullName>
                </value>
                <value>
                    <fullName>Tucson, AZ</fullName>
                </value>
                <value>
                    <fullName>Worcester, MA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Venue_Address__c</fullName>
        <description>Actual  billing/mail address</description>
        <label>Venue_Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Venue_Contact__c</fullName>
        <description>Contact at the venue</description>
        <label>Venue Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Venue_Name__c</fullName>
        <description>Where is the reception being held?  Ex Marriot, Gand Ballroom</description>
        <label>Venue Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Venue_Website__c</fullName>
        <description>Website for the Venue</description>
        <label>Venue Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X10X10_Booth_Received_Date__c</fullName>
        <label>10X10 Booth Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X10X10_Booth_Sent_Date__c</fullName>
        <label>10X10 Booth Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X10_Days_Date_Received_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>10 Days Date Received Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X20_Days_Date_Received_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>20 Days Date Received Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_4__c</fullName>
        <label>Zip+4</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iPad_Stand_Received_Date__c</fullName>
        <label>iPad Stand Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>iPad_Stand_Sent_Date__c</fullName>
        <label>iPad Stand Sent Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>AllCampaigns_d_2</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>salt</label>
    </listViews>
    <listViews>
        <fullName>Brand_Recognition</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>12/1/2011 12:00 AM</value>
        </filters>
        <label>Old Campaigns</label>
    </listViews>
    <listViews>
        <fullName>CMM_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>CMM</value>
        </filters>
        <label>CMM Campaigns</label>
    </listViews>
    <listViews>
        <fullName>CPS_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>Program_Start_Date__c</columns>
        <columns>Program_End_Date__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.CPS_EOC,Campaign.CPS_TS,Campaign.CPS_UB</value>
        </filters>
        <label>CPS Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Client_Forum</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Client Forum</value>
        </filters>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2015</value>
        </filters>
        <label>Client Forums 2015</label>
    </listViews>
    <listViews>
        <fullName>Client_Forum_2015_Waltham_MA</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>equals</operation>
        </filters>
        <label>Client Forum 2015 - Waltham, MA</label>
    </listViews>
    <listViews>
        <fullName>MailingCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.Mailing</value>
        </filters>
        <label>Mailing Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>UpcomingCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Conference_Website__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Upcoming Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>ASASymposium</fullName>
        <active>false</active>
        <description>Specail Record type for ASA&apos;s Symposium</description>
        <label>ASA Symposium</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPS_EOC</fullName>
        <active>true</active>
        <label>CPS - EOC</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPS_TS</fullName>
        <active>true</active>
        <label>CPS - TS</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPS_UB</fullName>
        <active>true</active>
        <label>CPS - UB</label>
    </recordTypes>
    <recordTypes>
        <fullName>CSWorkshop</fullName>
        <active>true</active>
        <description>Workshops held by Professional Services to generate new business/recognition</description>
        <label>CS Workshop</label>
    </recordTypes>
    <recordTypes>
        <fullName>Conference</fullName>
        <active>true</active>
        <description>All Conferences</description>
        <label>Conference</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mailing</fullName>
        <active>true</active>
        <description>Campaign done via mail, Holiday Card, Collateral Material, System / Product Upates</description>
        <label>Mailing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Meeting</fullName>
        <active>true</active>
        <description>This campaign is used to set up meetings using Contacts from various Accounts; e.g. Advisory Council</description>
        <label>Meeting</label>
    </recordTypes>
    <recordTypes>
        <fullName>PressRelease</fullName>
        <active>true</active>
        <description>This is used to communicate information to the local or national press.</description>
        <label>Press Release</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reception</fullName>
        <active>true</active>
        <description>Dinner/Cocktail or other similar event at a conference or regional party that RSVP is needed</description>
        <label>Reception</label>
    </recordTypes>
    <recordTypes>
        <fullName>ThinkAboutTomorrowTour</fullName>
        <active>true</active>
        <description>Special function Marketing runs at different Colleges/Universities as part of Wellness</description>
        <label>Think About Tomorrow Tour</label>
    </recordTypes>
    <recordTypes>
        <fullName>TrainingEvent</fullName>
        <active>true</active>
        <description>Training offered externally to many schools</description>
        <label>Training Event</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>